# task-tracker-llm-tmp

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt
src/: main.py
src/models/: session.py  task_tracker.py
src/services/: category_aggregator.py  gemini_client.py
src/ui/: main_window.py  summary_screen.py
src/utils/: clipboard.py  markdown.py
tests/test_models/: test_session.py  test_session_timezone.py  test_task_tracker.py
tests/test_services/: test_category_aggregator.py  test_gemini_client.py
tests/test_ui/: test_main_window.py
tests/test_utils/: test_clipboard.py  test_markdown.py
