[project]
name = "task-tracker-llm-tmp"
version = "0.1.0"
description = "タスク切り替え型時間記録アプリ - Gemini APIによる自動分類機能付き"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
